--- a/Ex01.md
+++ b/Ex01.md
@@ -1,6 +1,6 @@
 # Ex. No : 1	
 # IMPLEMENTATION OF SYMBOL TABLE 
-## Register Number :
+## Register Number :212223230057
 ## Date : 
 
 ## AIM   
@@ -17,9 +17,64 @@ To write a C program to implement a symbol table.
 8.	Stop the program. 
 
 ## PROGRAM
+```
+#include <stdio.h>
+#include <ctype.h>
+#include <string.h>
+#include <stdlib.h>
+#define MAX_EXPRESSION_SIZE 100
+#define MAX_SYMBOLS 15
+int main() {
+    int i = 0, x = 0, n;
+    void *add[MAX_SYMBOLS];
+    char b[MAX_EXPRESSION_SIZE], d[MAX_SYMBOLS], c, srch;
+    int found = 0;
+    printf("Enter the Expression terminated by $: ");
+    while ((c = getchar()) != '$' && i < MAX_EXPRESSION_SIZE - 1) {
+        b[i++] = c;
+    }
+    b[i] = '\0';
+    n = i - 1;
+    printf("Given Expression: %s\n", b);
+    printf("\nSymbol Table\n");
+    printf("Symbol\taddr\ttype\n");
+    for (int j = 0; j <= n && x < MAX_SYMBOLS; j++) {
+        c = b[j];
+        if (isalpha((unsigned char)c)) {
+            if (j == n || strchr("+-*=", b[j+1])) {
+                void *p = malloc(sizeof(char));
+                add[x] = p;
+                d[x] = c;
+                printf("%c\t%p\tidentifier\n", c, p);
+                x++;
+            }
+        }
+    }
+    while (getchar() != '\n'); 
+    printf("\nThe symbol to be searched: ");
+    srch = getchar();
+    for (i = 0; i < x; i++) {
+        if (srch == d[i]) {
+            printf("Symbol Found\n");
+            printf("%c@address%p\n", srch, add[i]);
+            found = 1;
+            break;
+        }
+    }
+    if (!found) {
+        printf("Symbol Not Found\n");
+    }
+    for (i = 0; i < x; i++) {
+        free(add[i]);
+    }
+    return 0;
+}
+```
 
 
 ## OUTPUT 
+![377320598-838c3845-6332-4c02-9684-fdfcc9446d8c](https://github.com/user-attachments/assets/0d2daea1-4fa3-41fd-94b7-246e4f08732d)
+![377320623-60d518a8-35e8-4c7a-a2f6-d4db24445df9](https://github.com/user-attachments/assets/4ba4fa2c-28c2-44e6-b4a8-b466fb2f52e4)
 
 ## RESULT
 The program to implement a symbol table is executed and the output is verified.
