--- a/Ex01.md
+++ b/Ex01.md
@@ -18,8 +18,65 @@ To write a C program to implement a symbol table.
 
 ## PROGRAM
 
+```
+#include <stdio.h>
+#include <ctype.h>
+#include <string.h>
+#include <stdlib.h>
+#define MAX_EXPRESSION_SIZE 100
+#define MAX_SYMBOLS 15
+int main() {
+    int i = 0, x = 0, n;
+    void *add[MAX_SYMBOLS];
+    char b[MAX_EXPRESSION_SIZE], d[MAX_SYMBOLS], c, srch;
+    int found = 0;
+    printf("Enter the Expression terminated by $: ");
+    while ((c = getchar()) != '$' && i < MAX_EXPRESSION_SIZE - 1) {
+        b[i++] = c;
+    }
+    b[i] = '\0';
+    n = i - 1;
+    printf("Given Expression: %s\n", b);
+    printf("\nSymbol Table\n");
+    printf("Symbol\taddr\ttype\n");
+    for (int j = 0; j <= n && x < MAX_SYMBOLS; j++) {
+        c = b[j];
+        if (isalpha((unsigned char)c)) {
+            if (j == n || strchr("+-*=", b[j+1])) {
+                void *p = malloc(sizeof(char));
+                add[x] = p;
+                d[x] = c;
+                printf("%c\t%p\tidentifier\n", c, p);
+                x++;
+            }
+        }
+    }
+    while (getchar() != '\n'); 
+    printf("\nThe symbol to be searched: ");
+    srch = getchar();
+    for (i = 0; i < x; i++) {
+        if (srch == d[i]) {
+            printf("Symbol Found\n");
+            printf("%c@address%p\n", srch, add[i]);
+            found = 1;
+            break;
+        }
+    }
+    if (!found) {
+        printf("Symbol Not Found\n");
+    }
+    for (i = 0; i < x; i++) {
+        free(add[i]);
+    }
+    return 0;
+}
+```
+
 
 ## OUTPUT 
+![Screenshot 2024-11-06 083930](https://github.com/user-attachments/assets/5b7904cb-e96b-4d3a-b850-77601baf5aa8)
+![Screenshot 2024-11-06 084041](https://github.com/user-attachments/assets/a41e09cd-ae20-44b0-8782-4ab32fb016d0)
+
 
 ## RESULT
 The program to implement a symbol table is executed and the output is verified.
