--- a/Ex02.md
+++ b/Ex02.md
@@ -1,6 +1,6 @@
 # Ex. No : 2	
 # GENERATION OF LEXICAL TOKENS LEX/FLEX TOOL
-## Register Number :
+## Register Number :212223230057
 ## Date : 
 
 ## AIM   
@@ -24,9 +24,70 @@ To write a lex program to implement lexical analyzer to recognize a few patterns
 7.	Compile that file with C compiler and verify the output.
 
 ## PROGRAM
+```
+ex2.l
+
+%{
+/* program to recognize a C program */
+int COMMENT = 0;
+%}
+
+identifier [a-zA-Z][a-zA-Z0-9]*
+
+%%
+#.* { printf("\n%s is a PREPROCESSOR DIRECTIVE", yytext); }
+int|float|char|double|while|for|do|if|break|continue|void|switch|case|long|struct|const|typedef|return|else|goto { printf("\n\t%s is a KEYWORD", yytext); }
+"/*" { COMMENT = 1; }
+"*/" { COMMENT = 0; }
+{identifier}\( { if (!COMMENT) printf("\n\nFUNCTION\n\t%s", yytext); }
+\{ { if (!COMMENT) printf("\n BLOCK BEGINS"); }
+\} { if (!COMMENT) printf("\n BLOCK ENDS"); }
+{identifier}(\[[0-9]*\])? { if (!COMMENT) printf("\n %s IDENTIFIER", yytext); }
+\".*\" { if (!COMMENT) printf("\n\t%s is a STRING", yytext); }
+[0-9]+ { if (!COMMENT) printf("\n\t%s is a NUMBER", yytext); }
+\)(\;)? { if (!COMMENT) printf("\n\t"); ECHO; printf("\n"); }
+\( ECHO;
+= { if (!COMMENT) printf("\n\t%s is an ASSIGNMENT OPERATOR", yytext); }
+\<=|\>=|\<|==|\> { if (!COMMENT) printf("\n\t%s is a RELATIONAL OPERATOR", yytext); }
+%%
+
+int main(int argc, char **argv) {
+    if (argc > 1) {
+        FILE *file;
+        file = fopen(argv[1], "r");
+        if (!file) {
+            printf("could not open %s \n", argv[1]);
+            exit(0);
+        }
+        yyin = file;
+    }
+    yylex();
+    printf("\n\n");
+    return 0;
+}
+
+int yywrap() {
+    return 0;
+}
+
+
+ex2.c
+
+#include<stdio.h>
+
+int main(){
+	int a,b;
+	return 0;
+}
+
+
+
+```
 
 
 ## OUTPUT 
+
+![383230597-d7fd7681-0a16-48e2-a53e-acb9eee3797c](https://github.com/user-attachments/assets/b7255784-03b2-4e8b-bde3-2a453e0cc164)
 
 ## RESULT
 The lexical analyzer is implemented using lex and the output is verified.
