--- a/Ex03.md
+++ b/Ex03.md
@@ -1,6 +1,6 @@
 # Ex. No : 3	
 # RECOGNITION OF A VALID ARITHMETIC EXPRESSION THAT USES
-## Register Number :
+## Register Number :212223230057
 ## Date : 
 
 ## AIM   
@@ -17,9 +17,81 @@ To write a yacc program to recognize a valid arithmetic expression that uses ope
 8.	Enter an arithmetic expression as input and the tokens are identified as output.
 
 ## PROGRAM
+```
+
+ex3.l file
+
+%{
+#include "y.tab.h"
+%}
+
+%% 
+
+"="                     { printf("\n Operator is EQUAL"); return '='; } 
+"+"                     { printf("\n Operator is PLUS"); return PLUS; }
+"-"                     { printf("\n Operator is MINUS"); return MINUS; }
+"/"                     { printf("\n Operator is DIVISION"); return DIVISION; }
+"*"                     { printf("\n Operator is MULTIPLICATION"); return MULTIPLICATION; } 
+[a-zA-Z]*[0-9]*        { printf("\n Identifier is %s", yytext); return ID; }
+.                       { return yytext[0]; }
+\n                      { return 0; }
+
+%% 
+
+int yywrap() { return 1; }
+
+ex3.y file
+%{
+#include <stdio.h>
+
+// Declare yylex and yyerror before their usage
+int yylex(void);
+void yyerror(char *s);
+
+/* This YACC program is for recognizing the Expression */
+%}
+
+%token ID PLUS MINUS MULTIPLICATION DIVISION
+
+%% 
+
+statement: 
+    ID '=' E {
+        printf("\nValid arithmetic expression\n");
+    }
+    ;
+
+E: 
+    E PLUS ID
+    | E MINUS ID
+    | E MULTIPLICATION ID
+    | E DIVISION ID
+    | ID
+    ;
+
+%% 
+
+extern FILE* yyin; 
+
+int main() {
+    do {
+        yyparse();
+    } while (!feof(yyin)); 
+    return 0; 
+}
+
+void yyerror(char *s) { 
+    fprintf(stderr, "Error: %s\n", s); 
+}
+
+ex3.txt
+
+x=a+b
+```
 
 
 ## OUTPUT 
 
+![383415302-d9182498-d998-4300-bd37-af47ad922577](https://github.com/user-attachments/assets/02955711-694e-4de7-87b7-da383f40ad47)
 ## RESULT
 A YACC program to recognize a valid arithmetic expression that uses operator +,-,* and / is executed successfully and the output is verified.
