--- a/Ex04.md
+++ b/Ex04.md
@@ -1,6 +1,6 @@
 # Ex. No : 4	
 # RECOGNITION OF A VALID VARIABLE WHICH STARTS WITH A LETTER FOLLOWED BY ANY NUMBER OF LETTERS OR DIGITS USING YACC
-## Register Number :
+## Register Number :212223230057
 ## Date : 
 
 ## AIM   
@@ -17,9 +17,81 @@ To write a YACC program to recognize a valid variable which starts with a letter
 8.	Enter a statement as input and the valid variables are identified as output.
 
 ## PROGRAM
+```
+ex4.l file
+
+
+
+%{
+#include "y.tab.h"
+%}
+
+%%
+
+"int" { return INT; }
+"float" { return FLOAT; }
+"double" { return DOUBLE; }
+
+[a-zA-Z][a-zA-Z0-9]* {
+    printf("\nIdentifier is %s", yytext);
+    return ID;
+}
+
+. { return yytext[0]; }
+
+\n { return '\\n'; }
+
+%%
+
+int yywrap() {
+    return 1;
+}
+
+
+ex4.y file
+
+%{
+#include <stdio.h>
+/* This YACC program is for recognizing the Expression */
+%}
+
+%token ID INT FLOAT DOUBLE
+
+%%
+
+D: T L
+;
+
+L: L ',' ID
+   | ID
+;
+
+T: INT
+  | FLOAT
+  | DOUBLE
+;
+
+%%
+
+extern FILE *yyin;
+
+int main() {
+    do {
+        yyparse();
+    } while (!feof(yyin));
+    return 0;
+}
+
+void yyerror(char *s) {
+    fprintf(stderr, "Error: %s\n", s);
+}
+```
+
 
 
 ## OUTPUT 
+![383234515-4f257d17-be6e-4293-99f4-f4907fd672a6](https://github.com/user-attachments/assets/6147fee6-fdaf-4d92-bc16-74bd0b31ea47)
+
 
 ## RESULT
 A  YACC program to recognize a valid variable which starts with a letter followed by any number of letters or digits is executed successfully and the output is verified.
