--- a/Ex05.md
+++ b/Ex05.md
@@ -1,6 +1,6 @@
 # Ex. No : 5	
 # RECOGNITION OF THE GRAMMAR (a<sup>n</sup>b where n>=10) USING YACC
-## Register Number :
+## Register Number :212223230057
 ## Date : 
 
 ## AIM   
@@ -17,9 +17,65 @@ To write a YACC program to recognize the grammar a<sup>n</sup>b where n>=10.
 8.	Enter a string as input and it is identified as valid or invalid.
  
 ## PROGRAM
+```
+
+ex5.l file
+
+%{ 
+/* Definition section */
+#include "y.tab.h" 
+%} 
+
+/* Rule Section */
+%% 
+[aA] {return A;} 
+[bB] {return B;} 
+\n {return NL;} 
+. {return yytext[0];} 
+%% 
+
+int yywrap() 
+{ 
+return 1; 
+} 
+
+
+ex5.y file
+
+%{ 
+/* Definition section */
+#include<stdio.h> 
+#include<stdlib.h> 
+%} 
+
+%token A B NL 
+
+/* Rule Section */
+%% 
+stmt: S NL { printf("valid string\n"); 
+			exit(0); } 
+; 
+S: A S B | 
+; 
+%% 
+
+int yyerror(char *msg) 
+{ 
+printf("invalid string\n"); 
+exit(0); 
+} 
+
+//driver code 
+main() 
+{ 
+printf("enter the string\n"); 
+yyparse(); 
+} 
+```
 
 
 ## OUTPUT 
+![383236132-521fd2e3-03b3-4d1c-8d58-40be9a372644](https://github.com/user-attachments/assets/6d9f3b8d-add0-4340-8500-e2d91b5e6ca9)
 
 ## RESULT
 The YACC program to recognize the grammar anb where n>=10 is executed successfully and the output is verified.
