--- a/Ex06.md
+++ b/Ex06.md
@@ -1,6 +1,6 @@
 # Ex. No : 6	
 # IMPLEMENTATION OF THE BACK END OF THE COMPILER 
-## Register Number :
+## Register Number :212223230057
 ## Date : 
 
 ## AIM   
@@ -15,9 +15,62 @@ To write a program to implement the back end of the compiler.
 6.	Stop the program.
 
 ## PROGRAM
+```
+ex6.c file
+
+#include <stdio.h>
+#include <ctype.h>
+#include <stdlib.h>
+
+int main() {
+    int i = 2, j = 0, k = 2, k1 = 0;
+    char ip[10], kk[10];
+    FILE *fp;
+
+    printf("Enter the filename of the intermediate code: ");
+    scanf("%s", kk);
+
+    fp = fopen(kk, "r");
+    if (fp == NULL) {
+        printf("\nError in opening the file\n");
+        return 1;
+    }
+
+    printf("\nStatement\tTarget Code\n\n");
+
+    while (fscanf(fp, "%s", ip) != EOF) {
+        printf("%s\tMOV %c,R%d SUB ", ip, ip[i + k], j);
+
+        if (ip[i + 1] == '+')
+            printf("ADD ");
+        else
+            printf("SUB ");
+
+        if (islower(ip[i]))
+            printf("%c,R%d\n", ip[i + k1], j);
+        else
+            printf("%c,%c\n", ip[i], ip[i + 2]);
+
+        j++;
+        k1 = 2;
+        k = 0;
+    }
+
+    fclose(fp);
+
+    return 0;
+}
 
 
+
+ex6.txt file
+
+
+X=a-b Y=a-c Z=a+b C=a-b C=a-b
+
+```
 ## OUTPUT 
+![383236858-524dca75-cfd3-4ea0-b27e-ef52f6e3f5df](https://github.com/user-attachments/assets/fb5372b2-d6ea-49aa-a549-d705fa491d62)
 
 ## RESULT
 The back end of the compiler is implemented successfully, and the output is verified.
